Overflow fix

--- a/client/style/app/zoom-control.less
+++ b/client/style/app/zoom-control.less
@@ -1,5 +1,9 @@
 .zoom-control
 {
+    & > & {
+        margin: 0;
+        position: relative;
+    }
     top: 10%;
     left: 0;
 
